# CMakeList.txt : CMake project for Graph_program, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (Graph_program "Graph_program.cpp" "Graph_program.h")

# TODO: Add tests and install targets if needed.
